[package]
name = "philharmonic-connector-impl-http-forward"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-impl-http-forward"
description = "Generic HTTP forwarding connector implementation for Philharmonic, built on mechanics-config's HttpEndpoint schema (http_forward capability)."

[dependencies]
async-trait = { version = "0.1", default-features = false, features = [] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
httpdate = { version = "1", default-features = false, features = [] }
mechanics-config = "0.1"
mechanics-http-client = { version = "0.2", default-features = false, features = ["http3"] } # kept: preserves opportunistic HTTP/3 connector transport
philharmonic-connector-common = "0.2"
philharmonic-connector-impl-api = "0.1"
rand = { version = "0.9", default-features = false, features = ["os_rng", "std", "std_rng", "thread_rng"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }
url = { version = "2", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }
wiremock = { version = "0.6", default-features = false, features = [] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
